--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+
+    <color name="blue_ribbon">#2150F5</color>
+    <color name="cod_gray">#1C1C1C</color>
+    <color name="coral_red">#FF4444</color>
+    <color name="dove_gray">#676767</color>
+    <color name="gallery">#F0F0F0</color>
+    <color name="mercury">#E3E3E3</color>
+    <color name="night_rider">#040302</color>
+    <color name="nobel">#B3B3B3</color>
+    <color name="pastel_green">#73DE73</color>
+    <color name="portafino">#FEFFB6</color>
+    <color name="rose_white">#FFFDFD</color>
+    <color name="wild_sand">#F6F6F6</color>
+    <color name="white">#FFFFFF</color>
+
+    <!-- Transparent -->
+    <color name="cod_gray_10">#4D1C1C1C</color>
+
 </resources>
