--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,37 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.TableApplication" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+
+    <attr name="primaryButtonStyle" format="reference" />
+    <attr name="secondaryButtonStyle" format="reference" />
+    <attr name="progressableButtonStyle" format="reference" />
+    <attr name="inputFieldStyle" format="reference" />
+    <attr name="colorPrimaryDisabled" format="reference|color" />
+    <attr name="colorBackground" format="reference|color" />
+
+    <style name="Theme.Table" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="primaryButtonStyle">@style/Theme.Table.Widget.Button</item>
+        <item name="secondaryButtonStyle">@style/Theme.Table.Widget.Button.Secondary</item>
+        <item name="progressableButtonStyle">@style/Theme.Table.Widget.Button.Progressable</item>
+        <item name="inputFieldStyle">@style/Theme.Table.Widget.EditText</item>
+        <item name="colorBackground">@color/white</item>
+
+        <item name="android:windowLightStatusBar">true</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+
+        <item name="android:windowBackground">?attr/colorBackground</item>
+        <item name="colorSurface">@color/wild_sand</item>
+        <item name="colorError">@color/coral_red</item>
+        <item name="colorOnBackground">@color/night_rider</item>
+        <item name="colorPrimary">@color/night_rider</item>
         <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" >?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+        <item name="colorPrimaryDisabled">@color/cod_gray</item>
+        <item name="colorSecondary">@color/wild_sand</item>
+        <item name="colorControlNormal">@color/dove_gray</item>
+        <item name="rippleColor">@color/cod_gray_10</item>
+
+        <!--Splash-->
+        <item name="android:windowSplashScreenAnimatedIcon" tools:targetApi="s">@drawable/ic_table_logo_animated</item>
+        <item name="android:windowSplashScreenAnimationDuration" tools:targetApi="s">1500</item>
     </style>
+
 </resources>
