--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,68 @@
             android:layout_marginHorizontal="@dimen/margin_huge"
             android:layout_marginTop="@dimen/margin_huge"
             android:hint="Phone number" />
+
+        <com.google.android.material.button.MaterialButton
+            style="@style/Theme.Table.Widget.Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/margin_huge"
+            android:layout_marginTop="@dimen/margin_huge"
+            android:text="Enabled primary button" />
+
+        <com.google.android.material.button.MaterialButton
+            style="@style/Theme.Table.Widget.Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/margin_huge"
+            android:layout_marginTop="@dimen/margin_normal"
+            android:enabled="false"
+            android:text="Disabled primary button" />
+
+        <com.google.android.material.button.MaterialButton
+            style="@style/Theme.Table.Widget.Button.Secondary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/margin_huge"
+            android:layout_marginTop="@dimen/margin_huge"
+            android:text="Enabled secondary button" />
+
+        <com.google.android.material.button.MaterialButton
+            style="@style/Theme.Table.Widget.Button.Secondary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/margin_huge"
+            android:layout_marginTop="@dimen/margin_normal"
+            android:enabled="false"
+            android:text="Disabled secondary button" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clipToPadding="false"
+            android:orientation="horizontal"
+            android:paddingVertical="@dimen/margin_huge">
+
+            <com.google.android.material.button.MaterialButton
+                style="@style/Theme.Table.Widget.Button"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_huge"
+                android:layout_marginEnd="@dimen/margin_tiny"
+                android:layout_weight="1"
+                android:text="Register" />
+
+            <com.google.android.material.button.MaterialButton
+                style="@style/Theme.Table.Widget.Button.Secondary"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_tiny"
+                android:layout_marginEnd="@dimen/margin_huge"
+                android:layout_weight="1"
+                android:text="Sign In" />
+
+        </LinearLayout>
+
     </LinearLayout>
 
     <include
