--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,21 +9,22 @@
         <item name="android:gravity">center</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textAppearance">@style/Theme.Ava.TextAppearance.Button</item>
-        <item name="android:textColor">?attr/colorOnPrimary</item>
+        <item name="android:textColor">@color/primary_button_text</item>
         <item name="android:backgroundTint">@color/primary_button_bg</item>
-        <item name="cornerRadius">@dimen/button_corner_radius</item>
+        <item name="cornerRadius">@dimen/corner_radius_large</item>
         <item name="rippleColor">?attr/rippleColor</item>
     </style>
 
     <style name="Theme.Table.Widget.Button.Secondary">
         <item name="android:backgroundTint">?attr/colorSecondary</item>
+        <item name="android:textColor">@color/secondary_button_text</item>
     </style>
 
     <style name="Theme.Table.Widget.Button.Progressable" parent="Widget.MaterialComponents.CardView">
         <item name="android:minHeight">@dimen/button_min_height</item>
         <item name="android:indeterminateTint">?attr/colorOnPrimary</item>
         <item name="cardBackgroundColor">@color/primary_button_bg</item>
-        <item name="cardCornerRadius">@dimen/button_corner_radius</item>
+        <item name="cardCornerRadius">@dimen/corner_radius_large</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textAppearance">@style/Theme.Ava.TextAppearance.Button</item>
     </style>
