--- a/modules/base/base_ui/src/main/res/values/dimens.xml
+++ b/modules/base/base_ui/src/main/res/values/dimens.xml
@@ -24,6 +24,7 @@
     <dimen name="margin_normal">20dp</dimen>
     <dimen name="margin_medium">16dp</dimen>
     <dimen name="margin_small">12dp</dimen>
+    <dimen name="margin_teeny">8dp</dimen>
     <dimen name="margin_tiny">4dp</dimen>
 
     <dimen name="corner_radius_large">16dp</dimen>
