--- a/modules/base/base_ui/src/main/res/values/text_styles.xml
+++ b/modules/base/base_ui/src/main/res/values/text_styles.xml
@@ -20,6 +20,11 @@
         <item name="android:fontFamily">@font/rational_medium</item>
     </style>
 
+    <style name="Theme.Ava.TextAppearance.UI16SB">
+        <item name="android:textSize">@dimen/text_xlarge</item>
+        <item name="android:fontFamily">@font/rational_semi_bold</item>
+    </style>
+
     <style name="Theme.Ava.TextAppearance.UI14R">
         <item name="android:textSize">@dimen/text_large</item>
         <item name="android:fontFamily">@font/rational_regular</item>
@@ -30,10 +35,15 @@
         <item name="android:fontFamily">@font/rational_semi_bold</item>
     </style>
 
+    <style name="Theme.Ava.TextAppearance.UI12R">
+        <item name="android:textSize">@dimen/text_normal</item>
+        <item name="android:fontFamily">@font/rational_regular</item>
+    </style>
+
 
     <!-- Custom text appearances -->
 
-    <style name="Theme.Ava.TextAppearance.Button" parent="Theme.Ava.TextAppearance.UI16M">
+    <style name="Theme.Ava.TextAppearance.Button" parent="Theme.Ava.TextAppearance.UI16SB">
         <item name="android:textColor">?attr/colorOnPrimary</item>
     </style>
 </resources>
