Code refactoring + add sign in feature

--- a/modules/features/feature_greeting/src/main/res/layout/fragment_greeting.xml
+++ b/modules/features/feature_greeting/src/main/res/layout/fragment_greeting.xml
@@ -44,7 +44,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_huge"
-        android:layout_weight="1"
+        android:layout_marginEnd="@dimen/margin_small"
         android:text="@string/greeting_register_title"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/vMbSignIn"
@@ -57,8 +57,8 @@
         style="@style/Theme.Table.Widget.Button.Secondary"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_small"
         android:layout_marginEnd="@dimen/margin_huge"
-        android:layout_weight="1"
         android:text="@string/greeting_sign_in_title"
         app:layout_constraintBottom_toBottomOf="@id/vMbRegister"
         app:layout_constraintEnd_toEndOf="parent"
