Code refactoring + add home screen fragment

--- a/modules/base/base_ui/src/main/res/values/text_styles.xml
+++ b/modules/base/base_ui/src/main/res/values/text_styles.xml
@@ -10,6 +10,11 @@
         <item name="android:fontFamily">@font/rational_semi_bold</item>
     </style>
 
+    <style name="Theme.Ava.TextAppearance.UI20SB">
+        <item name="android:textSize">@dimen/text_20</item>
+        <item name="android:fontFamily">@font/rational_semi_bold</item>
+    </style>
+
     <style name="Theme.Ava.TextAppearance.UI16L">
         <item name="android:textSize">@dimen/text_xlarge</item>
         <item name="android:fontFamily">@font/rational_light</item>
