--- a/modules/features/feature_container/src/main/res/menu/bottom_navigation_menu.xml
+++ b/modules/features/feature_container/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/homeFragment"
-        android:title="@string/navigation_home_title"
-        android:icon="@drawable/ic_home" />
-    <item android:id="@+id/action_booking"
-        android:title="@string/navigation_booking_title"
-        android:icon="@drawable/ic_booking" />
-    <item android:id="@+id/action_settings"
-        android:title="@string/navigation_settings_title"
-        android:icon="@drawable/ic_settings" />
+    <item
+        android:id="@+id/homeFragment"
+        android:icon="@drawable/ic_home"
+        android:title="@string/navigation_home_title" />
+    <item
+        android:id="@+id/bookingFragment"
+        android:icon="@drawable/ic_booking"
+        android:title="@string/navigation_booking_title" />
+    <item
+        android:id="@+id/settingsFragment"
+        android:icon="@drawable/ic_settings"
+        android:title="@string/navigation_settings_title" />
 </menu>
