--- a/modules/features/feature_home/src/main/res/drawable/room_background.xml
+++ b/modules/features/feature_home/src/main/res/drawable/room_background.xml
@@ -3,7 +3,7 @@
     android:color="?attr/rippleColor">
     <item>
         <shape>
-            <corners android:radius="40dp" />
+            <corners android:radius="@dimen/corner_radius_giant" />
         </shape>
     </item>
 </ripple>
