--- a/modules/base/base_ui/src/main/res/values/text_styles.xml
+++ b/modules/base/base_ui/src/main/res/values/text_styles.xml
@@ -15,9 +15,19 @@
         <item name="android:fontFamily">@font/rational_semi_bold</item>
     </style>
 
+    <style name="Theme.Ava.TextAppearance.UI20M">
+        <item name="android:textSize">@dimen/text_20</item>
+        <item name="android:fontFamily">@font/rational_medium</item>
+    </style>
+
     <style name="Theme.Ava.TextAppearance.UI16L">
         <item name="android:textSize">@dimen/text_xlarge</item>
         <item name="android:fontFamily">@font/rational_light</item>
+    </style>
+
+    <style name="Theme.Ava.TextAppearance.UI16R">
+        <item name="android:textSize">@dimen/text_xlarge</item>
+        <item name="android:fontFamily">@font/rational_regular</item>
     </style>
 
     <style name="Theme.Ava.TextAppearance.UI16M">
