--- a/modules/features/feature_container/src/main/res/layout/layout_splash.xml
+++ b/modules/features/feature_container/src/main/res/layout/layout_splash.xml
@@ -7,23 +7,23 @@
     tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
 
     <ImageView
-        android:id="@+id/vIvCurtainLeft"
+        android:id="@+id/left_curtain"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:background="@color/white"
-        app:layout_constraintEnd_toStartOf="@id/vIvCurtainRight"
+        app:layout_constraintEnd_toStartOf="@id/right_curtain"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/vIvCurtainRight"
+        android:id="@+id/right_curtain"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:background="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/vIvCurtainLeft" />
+        app:layout_constraintStart_toEndOf="@id/left_curtain" />
 
     <ImageView
-        android:id="@+id/vIvSplashIcon"
+        android:id="@+id/splash_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -32,10 +32,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/vIvBullet"
+        android:id="@+id/bullet_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/ic_bullet"
+        android:rotation="180"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
