--- a/modules/features/feature_greeting/src/main/res/layout/fragment_greeting.xml
+++ b/modules/features/feature_greeting/src/main/res/layout/fragment_greeting.xml
@@ -7,7 +7,7 @@
     tools:context=".GreetingFragment">
 
     <ImageView
-        android:id="@+id/vIvWorkspace"
+        android:id="@+id/workspace"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="145dp"
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/vTvTitle"
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_xlarge"
@@ -24,10 +24,10 @@
         android:textAppearance="@style/Theme.Ava.TextAppearance.UI30SB"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/vIvWorkspace" />
+        app:layout_constraintTop_toBottomOf="@id/workspace" />
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/vTvSignature"
+        android:id="@+id/subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_medium"
@@ -36,10 +36,10 @@
         android:textAppearance="@style/Theme.Ava.TextAppearance.UI16L"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/vTvTitle" />
+        app:layout_constraintTop_toBottomOf="@id/title" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/vMbRegister"
+        android:id="@+id/register_button"
         style="@style/Theme.Table.Widget.Button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -47,22 +47,22 @@
         android:layout_marginEnd="@dimen/margin_small"
         android:text="@string/greeting_register_title"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/vMbSignIn"
+        app:layout_constraintEnd_toStartOf="@id/sign_in_button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/vTvSignature"
+        app:layout_constraintTop_toBottomOf="@id/subtitle"
         app:layout_constraintVertical_bias="0.62" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/vMbSignIn"
+        android:id="@+id/sign_in_button"
         style="@style/Theme.Table.Widget.Button.Secondary"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_small"
         android:layout_marginEnd="@dimen/margin_huge"
         android:text="@string/greeting_sign_in_title"
-        app:layout_constraintBottom_toBottomOf="@id/vMbRegister"
+        app:layout_constraintBottom_toBottomOf="@id/register_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/vMbRegister"
-        app:layout_constraintTop_toTopOf="@id/vMbRegister" />
+        app:layout_constraintStart_toEndOf="@id/register_button"
+        app:layout_constraintTop_toTopOf="@id/register_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
