--- a/modules/features/feature_settings/src/main/res/layout/fragment_settings.xml
+++ b/modules/features/feature_settings/src/main/res/layout/fragment_settings.xml
@@ -7,7 +7,7 @@
     tools:context="com.demonstrations.table.featuresettings.SettingsFragment">
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/vMtvTitle"
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_large"
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/vMtvSubtitle"
+        android:id="@+id/subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_large"
@@ -27,10 +27,10 @@
         android:textAppearance="@style/Theme.Ava.TextAppearance.UI16L"
         android:textColor="?attr/colorControlNormal"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/vMtvTitle" />
+        app:layout_constraintTop_toBottomOf="@id/title" />
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/vMtvDarkTheme"
+        android:id="@+id/dark_theme_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_large"
@@ -38,18 +38,19 @@
         android:text="@string/settings_dark_theme_title"
         android:textAppearance="@style/Theme.Ava.TextAppearance.UI16M"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/vMtvSubtitle" />
+        app:layout_constraintTop_toBottomOf="@id/subtitle" />
 
     <com.google.android.material.switchmaterial.SwitchMaterial
+        android:id="@+id/dark_theme_switch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/margin_large"
-        app:layout_constraintBottom_toBottomOf="@id/vMtvDarkTheme"
+        app:layout_constraintBottom_toBottomOf="@id/dark_theme_title"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/vMtvDarkTheme" />
+        app:layout_constraintTop_toTopOf="@id/dark_theme_title" />
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/vMtvLogOut"
+        android:id="@+id/log_out_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_large"
@@ -57,6 +58,6 @@
         android:text="@string/settings_log_out_title"
         android:textAppearance="@style/Theme.Ava.TextAppearance.UI16M"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/vMtvDarkTheme" />
+        app:layout_constraintTop_toBottomOf="@id/dark_theme_title" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
