--- a/modules/features/feature_settings/src/main/res/layout/fragment_settings.xml
+++ b/modules/features/feature_settings/src/main/res/layout/fragment_settings.xml
@@ -18,27 +18,15 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/subtitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_large"
-        android:layout_marginTop="@dimen/margin_tiny"
-        android:text="@string/settings_subtitle"
-        android:textAppearance="@style/Theme.Ava.TextAppearance.UI16L"
-        android:textColor="?attr/colorControlNormal"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title" />
-
-    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/dark_theme_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_large"
-        android:layout_marginTop="@dimen/margin_huge"
+        android:layout_marginTop="@dimen/margin_xlarge"
         android:text="@string/settings_dark_theme_title"
         android:textAppearance="@style/Theme.Ava.TextAppearance.UI16M"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/subtitle" />
+        app:layout_constraintTop_toBottomOf="@id/title" />
 
     <com.google.android.material.switchmaterial.SwitchMaterial
         android:id="@+id/dark_theme_switch"
